<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PuntosActivity">

    <TextView
        android:id="@+id/textView_finalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/a2_final"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_resumen"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/a2_resumen"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_finalizado" />

    <TextView
        android:id="@+id/textView_aciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/indie_flower"
        android:text="@string/a2_acertadas"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_resumen" />

    <TextView
        android:id="@+id/textView_aciertosNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_aciertos"
        app:layout_constraintTop_toBottomOf="@+id/textView_resumen" />

    <TextView
        android:id="@+id/textView_puntuacionNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_puntuacion"
        app:layout_constraintTop_toBottomOf="@+id/textView_aciertosNum" />

    <TextView
        android:id="@+id/textView_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:fontFamily="@font/indie_flower"
        android:text="@string/a2_puntuacion"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_aciertos" />

    <TextView
        android:id="@+id/tv_calificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/indie_flower"
        android:text="@string/calificacion"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_puntuacion" />

    <ImageView
        android:id="@+id/iv_estrellas"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/estrellas_obtenidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toEndOf="@+id/tv_calificacion"
        app:layout_constraintTop_toBottomOf="@+id/textView_resumen"
        app:srcCompat="@drawable/una_estrella" />

    <Button
        android:id="@+id/btn_reiniciar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/boton_fondo"
        android:fontFamily="@font/open_sans_extrabold"
        android:onClick="reiniciar"
        android:text="@string/textReiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/boton_fondo"
        android:fontFamily="@font/open_sans_extrabold"
        android:onClick="salir"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="160dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/_1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/_2"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/_3"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/_4"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/_5"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>