<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JuegoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indie_flower"
            android:text="@string/a2_puntuacion"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="105dp" />

        <TextView
            android:id="@+id/textView_numPuntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/indie_flower"
            android:text="@string/_6"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6_pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/a3_pregunta"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="105dp" />

        <TextView
            android:id="@+id/textView_numPregunta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/_5"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="264dp"
            tools:layout_editor_absoluteY="105dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_preguntaActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/indie_flower"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/aqui_va_la_pregunta_en_cuesti_n"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutRespuestas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_preguntaActual"
        app:layout_constraintVertical_bias="0.859">

    </LinearLayout>

    <ImageView
        android:id="@+id/imgview_pregunta_cuatro"
        android:layout_width="127dp"
        android:layout_height="177dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imagen_android"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_preguntaActual"
        app:srcCompat="@drawable/android_pregunta_cuatro" />

</android.support.constraint.ConstraintLayout>